--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #fff;
-    padding:10px
+    padding:10px;
 }
 
 body {
