--- a/style.css
+++ b/style.css
@@ -6,35 +6,33 @@
 
 h1 {
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Fantasy;
     color: #fff;
     padding:10px;
+    letter-spacing: 2px;
+    font-weight: 300;
 }
 
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
     overflow: hidden;
     height: 100vh;
-    background: #000;
+    background: #318CE7;
 }
-
-#menu{
-    position:absolute;
-    top:20px;
-    left:10px;
+.btns{
+    display:flex;
+    gap:10px;
+    align-items:center;
+    justify-content: center;
 }
-#exit{
-    position:absolute;
-    top:80px;
-    left:10px;
-}
-
 button{
     color:#fff;
     border:none;
     outline:none;
-    padding:10px 15px;
+    padding:7px 12px;
     cursor:pointer;
     font-weight: 600;
     font-size: 16px;
@@ -48,53 +46,5 @@ button:hover{
     box-shadow: 0px 0px 0px 0px #1c1c1c;
 }
 
-@media screen and (max-width:1280px){
-    canvas{
-        margin-top: 50px;
-    }
-    h1{
-        padding-top:30px;
-    }
-    
-}
 
-@media screen and (max-width:1024px){
-    canvas{
-        margin-top: 150px;
-    }
-    h1{
-        padding-top:30px;
-    }
-}
-@media screen and (max-width:912px){
-    canvas{
-        margin-top: 350px;
-    }
-    h1{
-        padding-top:30px;
-    }
-}
-@media screen and (max-width:540px){
-    canvas{
-        width:440px;
-        height:252px;
-        margin-top:100px;
-    }
-}
-@media screen and (max-width:440px){
-    canvas{
-        width:340px;
-        height:252px;
-        margin-top:100px;
-    }
-    #menu{
-        position:absolute;
-        top:500px;
-        left:35%;
-    }
-    #exit{
-        position:absolute;
-        top:580px;
-        left:35%;
-    }
-}
+
